--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Automotive Photography</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div class="hero-bg"></div>
+  <header>
+    <nav>
+      <ul>
+        <li>ABOUT ME</li>
+        <li>WORK</li>
+        <li class="logo-space">
+          <!-- Blank space for logo -->
+          <div class="logo-blank"></div>
+          <div class="subtitle">Irinel.visuals</div>
+        </li>
+        <li>INSTAGRAM</li>
+        <li>CONTACT</li>
+      </ul>
+    </nav>
+  </header>
+</body>
+</html>
