--- a/Index.html
+++ b/Index.html
@@ -3,25 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Automotive Photography</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-main.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="hero-bg"></div>
   <header>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playwrite+DK+Loopet:wght@100..400&family=Rammetto+One&display=swap" rel="stylesheet">
     <nav>
       <ul>
-        <li>ABOUT ME</li>
-        <li>WORK</li>
+        <li><a href="#about" style="color: inherit; text-decoration: none;">ABOUT ME</a></li>
+        <li><a href="gallery.html" style="color: inherit; text-decoration: none;">GALLERY</a></li>
         <li class="logo-space">
           <!-- Blank space for logo -->
           <div class="logo-blank"></div>
           <div class="subtitle">Irinel.visuals</div>
         </li>
-        <li>INSTAGRAM</li>
-        <li>CONTACT</li>
+        <li><a href="https://instagram.com/irinell.visuals" target="_blank" style="color: inherit; text-decoration: none;">INSTAGRAM</a></li>
+        <li><a href="contact.html" style="color: inherit; text-decoration: none;">CONTACT</a></li>
       </ul>
     </nav>
   </header>
+  <a href="gallery.html" class="see-my-work-btn">SEE MY WORK</a>
 </body>
 </html>
