--- a/gallery.html
+++ b/gallery.html
@@ -10,30 +10,40 @@
 <body>
   <div class="hero-bg"></div>
   <header>
-    <nav>
-      <ul>
-        <li><a href="#about" style="color: inherit; text-decoration: none;">ABOUT ME</a></li>
-        <li><a href="gallery.html" style="color: inherit; text-decoration: none;">GALLERY</a></li>
-        <li class="logo-space">
-          <div class="logo-blank"></div>
-          <a href="index.html" class="subtitle" style="color: inherit; text-decoration: none;">Irinel.visuals</a>
-        </li>
-        <li><a href="https://instagram.com/irinell.visuals" target="_blank" style="color: inherit; text-decoration: none;">INSTAGRAM</a></li>
-        <li><a href="contact.html" style="color: inherit; text-decoration: none;">CONTACT</a></li>
-      </ul>
-    </nav>
-  </header>
+    <div class="header-grey-box">
+      <nav>
+        <ul>
+          <li><a href="#about" style="color: inherit; text-decoration: none;">ABOUT ME</a></li>
+          <li><a href="gallery.html" style="color: inherit; text-decoration: none;">GALLERY</a></li>
+          <li class="logo-space">
+            <div class="logo-blank"></div>
+            <a href="index.html" class="subtitle" style="color: inherit; text-decoration: none;">Irinel.visuals</a>
+          </li>
+          <li><a href="https://instagram.com/irinell.visuals" target="_blank" style="color: inherit; text-decoration: none;">INSTAGRAM</a></li>
+          <li><a href="contact.html" style="color: inherit; text-decoration: none;">CONTACT</a></li>
+        </ul>
+      </nav>
+    </div>
+</header>
+  <br>
   <h1 class="gallery-title">My Work</h1>
+  <br>
+  
+  <br>
   <main class="gallery">
-    <div class="gallery-item"><img src="Photos/1.jpg" alt="Photo 1" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/2.jpg" alt="Photo 2" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/3.png" alt="Photo 3" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/4.png" alt="Photo 4" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/5.jpg" alt="Photo 5" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/6.jpg" alt="Photo 6" loading="lazy"></div>
     <div class="gallery-item"><img src="Photos/7.jpg" alt="Photo 7" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/photo8.jpg" alt="Photo 8" loading="lazy"></div>
-    
+    <div class="gallery-item"><img src="Photos/2.jpg" alt="Photo 2" loading="lazy"></div>
+    <div class="gallery-item"><img src="Photos/10.png" alt="Photo 10" loading="lazy"></div>
+    <div class="gallery-item"><img src="Photos/4.png" alt="Photo 4" loading="lazy"></div>
+    <div class="gallery-item"><img src="Photos/12.jpg" alt="Photo 12" loading="lazy"></div>
+    <div class="gallery-item"><img src="Photos/1.jpg" alt="Photo 1" loading="lazy"></div>
+    <div class="gallery-item"><img src="Photos/8.jpg" alt="Photo 8" loading="lazy"></div>
+    <div class="gallery-item"><img src="Photos/5.jpg" alt="Photo 5" loading="lazy"></div>
+    <div class="gallery-item"><img src="Photos/3.png" alt="Photo 3" loading="lazy"></div>
+    <div class="gallery-item"><img src="Photos/11.jpg" alt="Photo 11" loading="lazy"></div>
+    <div class="gallery-item"><img src="Photos/6.jpg" alt="Photo 6" loading="lazy"></div>
+    <div class="gallery-item"><img src="Photos/9.jpg" alt="Photo 9" loading="lazy"></div>
+    <div class="gallery-item"><img src="Photos/13.jpg" alt="Photo 13" loading="lazy"></div>
   </main>
 </body>
 </html>
