--- a/Index.html
+++ b/Index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Automotive Photography</title>
+  <title>Irinel Visuals</title>
   <link rel="stylesheet" href="style-main.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="hero-bg"></div>
   <header>
     <div class="header-grey-box">
       <nav>
