--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Automotive Photography</title>
+  <title>Irinel Visuals || Gallery</title>
   <link rel="stylesheet" href="style-gallery.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playwrite+DK+Loopet:wght@100..400&family=Rammetto+One&display=swap" rel="stylesheet">
