Update the gallery page to include a new image and add a new style for the gallery

--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,12 @@
       </nav>
     </div>
   </header>
+
+  <main class="center-hero">
+    <h1 class="main-title">Irinel Visuals</h1>
+    <p class="main-subtitle">The art of automotive photography</p>
+  </main>
+
   <a href="gallery.html" class="see-my-work-btn">SEE MY WORK</a>
 </body>
 </html>
