--- a/gallery.html
+++ b/gallery.html
@@ -31,19 +31,71 @@
   
   <br>
   <main class="gallery">
-    <div class="gallery-item"><img src="Photos/7.jpg" alt="Photo 7" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/2.jpg" alt="Photo 2" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/10.png" alt="Photo 10" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/4.png" alt="Photo 4" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/12.jpg" alt="Photo 12" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/1.jpg" alt="Photo 1" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/8.jpg" alt="Photo 8" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/5.jpg" alt="Photo 5" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/3.png" alt="Photo 3" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/11.jpg" alt="Photo 11" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/6.jpg" alt="Photo 6" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/9.jpg" alt="Photo 9" loading="lazy"></div>
-    <div class="gallery-item"><img src="Photos/13.jpg" alt="Photo 13" loading="lazy"></div>
-  </main>
+  <div class="gallery-item">
+    <a href="https://instagram.com/p/DHQdJKntE9s/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener">
+      <img src="Photos/7.jpg" alt="Photo 7" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/p/DGDlB6fNf4X/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener">
+      <img src="Photos/2.jpg" alt="Photo 2" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/p/DIWDal3tYGT/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener">
+      <img src="Photos/10.png" alt="Photo 10" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/irinell.visuals" target="_blank" rel="noopener">
+      <img src="Photos/4.png" alt="Photo 4" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/p/DItPMJKN83G/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener">
+      <img src="Photos/12.jpg" alt="Photo 12" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/p/DGq9XT0t4vr/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener">
+      <img src="Photos/1.jpg" alt="Photo 1" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/p/DGq9XT0t4vr/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener">
+      <img src="Photos/8.jpg" alt="Photo 8" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/p/DItPMJKN83G/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener">
+      <img src="Photos/5.jpg" alt="Photo 5" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/p/DIWDal3tYGT/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener">
+      <img src="Photos/3.png" alt="Photo 3" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/irinell.visuals" target="_blank" rel="noopener">
+      <img src="Photos/11.jpg" alt="Photo 11" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/p/DGYyRvNNq_e/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener">
+      <img src="Photos/6.jpg" alt="Photo 6" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/p/DGq9XT0t4vr/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener">
+      <img src="Photos/9.jpg" alt="Photo 9" loading="lazy">
+    </a>
+  </div>
+  <div class="gallery-item">
+    <a href="https://instagram.com/p/DFib_x7tRE5/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener">
+      <img src="Photos/13.jpg" alt="Photo 13" loading="lazy">
+    </a>
+  </div>
+</main>
 </body>
 </html>
