--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
           <li><a href="#about" style="color: inherit; text-decoration: none;">ABOUT ME</a></li>
           <li><a href="gallery.html" style="color: inherit; text-decoration: none;">GALLERY</a></li>
           <li class="logo-space">
-            <a href="index.html">
+            <a href="Index.html">
               <img src="Photos/logo.jpeg" alt="Irinel.visuals Logo" class="logo-img">
             </a>
           </li>
