--- a/gallery.html
+++ b/gallery.html
@@ -97,5 +97,15 @@
     </a>
   </div>
 </main>
+
+<footer class="site-footer">
+  <div class="footer-content">
+    <p>&copy; 2025 Irinel Visuals. All rights reserved.</p>
+    <p>
+      <a href="https://instagram.com/irinell.visuals" target="_blank" rel="noopener" class="footer-link">Instagram</a> |
+      <a href="contact.html" class="footer-link">Contact</a>
+    </p>
+  </div>
+</footer>
 </body>
 </html>
