--- a/Index.html
+++ b/Index.html
@@ -1,34 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Irinel Visuals</title>
-  <link rel="stylesheet" href="style-main.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style-main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div class="hero-bg"></div>
-  <header>
-    <div class="header-grey-box">
-      <nav>
-        <ul>
-          <li><a href="#about" style="color: inherit; text-decoration: none;">ABOUT ME</a></li>
-          <li><a href="gallery.html" style="color: inherit; text-decoration: none;">GALLERY</a></li>
-          <li class="logo-space">
-            <img src="Photos/logo.jpeg" alt="Irinel.visuals Logo" class="logo-img">
-          </li>
-          <li><a href="https://instagram.com/irinell.visuals" target="_blank" style="color: inherit; text-decoration: none;">INSTAGRAM</a></li>
-          <li><a href="contact.html" style="color: inherit; text-decoration: none;">CONTACT</a></li>
-        </ul>
-      </nav>
+  <section class="hero">
+    <div class="hero-bg"></div>
+
+    <header>
+      <div class="header-grey-box">
+        <nav>
+          <ul>
+            <li><a href="#about" style="color: inherit; text-decoration: none;">ABOUT ME</a></li>
+            <li><a href="gallery.html" style="color: inherit; text-decoration: none;">GALLERY</a></li>
+            <li class="logo-space">
+              <img src="Photos/logo.jpeg" alt="Irinel.visuals Logo" class="logo-img" />
+            </li>
+            <li><a href="https://instagram.com/irinell.visuals" target="_blank" style="color: inherit; text-decoration: none;">INSTAGRAM</a></li>
+            <li><a href="contact.html" style="color: inherit; text-decoration: none;">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <div class="hero-content">
+      <h1 class="main-title">Irinel Visuals</h1>
+      <p class="main-subtitle">The art of automotive photography</p>
+      
     </div>
-  </header>
+    <a href="gallery.html" class="see-my-work-btn">SEE MY WORK</a>
+    <p class="scroll-down-text">Scroll down for more</p>
+<div class="scroll-down-indicator"></div>
+  </section>
 
-  <main class="center-hero">
-    <h1 class="main-title">Irinel Visuals</h1>
-    <p class="main-subtitle">The art of automotive photography</p>
-  </main>
+  <section id="about" class="about-section">
+    <div class="about-container">
+      <h2>ABOUT ME</h2>
+      <p class="about-intro">
+        Hello! I'm Irinel Nicolas, a 17-year-old aspiring automotive photographer.<br>
+        A lifelong petrolhead, I've been passionate about cars since birth. In 2019, I began combining that passion with photography through carspotting, and by 2022—at just 14 years old—I shot my first car features.
+      </p>
+      <div class="about-grid">
+        <div class="about-img about-img-ferrari"><img src="Photos/about1.jpeg" alt="Red Ferrari" /></div>
+        <div class="about-text about-text-top-right">In 2024 I took things to the next level by turning photography into a profession. I'm currently collaborating with brands such as BMW Apan Motors, Dropdown, ShiftAndMeet, and more.</div>
+        <div class="about-img about-img-bmw"><img src="Photos/about2.jpeg" alt="BMW X1" /></div>
+        <div class="about-text about-text-bottom-left">I'm open to both private and magazine shoots, available for projects anywhere across the country.<br>Have questions or want to book a shoot?<br>Feel free to reach out via email—I'd love to connect!</div>
+        <div class="about-img about-img-porsche"><img src="Photos/about4.jpeg" alt="Porsche Key" /></div>
+        <div class="about-img about-img-audi"><img src="Photos/about3.jpeg" alt="Audi" /></div>
+      </div>
+    </div>
+  </section>
 
-  <a href="gallery.html" class="see-my-work-btn">SEE MY WORK</a>
+  <script>
+    // Smooth scroll behavior
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute('href'));
+        if (target) {
+          target.scrollIntoView({ behavior: 'smooth' });
+        }
+      });
+    });
+  </script>
 </body>
 </html>
