--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <div class="header-grey-box">
       <nav>
         <ul>
-          <li><a href="#about" style="color: inherit; text-decoration: none;">ABOUT ME</a></li>
+          <li><a href="Index.html#about" style="color: inherit; text-decoration: none;">ABOUT ME</a></li>
           <li><a href="gallery.html" style="color: inherit; text-decoration: none;">GALLERY</a></li>
           <li class="logo-space">
             <a href="Index.html">
